# guardian

./: .gitignore  README.md  build.py  pyproject.toml
scripts/: fetch-binaries.py
src/guardian/: __init__.py  builder.py  decorators.py  guardian_logger.py  logger.py  options.py  scanner.py  update.py
src/guardian/fastapi/: decorators.py  middleware.py
src/hiss/: __init__.py  logger.py  options.py  scanner.py  update.py
src/hiss/fastapi/: decorators.py  middleware.py
tests/: test_options.py  test_scanner.py
tests/test_fastapi/: test_middleware.py
