[tool.poetry]
name = "hiss"
version = "0.1.0"
description = "Starlette Decorators & Middleware for Endpoint Virus Protection"
authors = ["Josh Jarabek <jarabekjosh@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111"
pydantic = "^2.7.2"
ruff = "^0.4.7"
ruff-lsp = "^0.0.53"
poetry-core = "^1.9.0"
mussels = "^0.4.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.0"
pytest-mock = "*"
pytest-asyncio = "^0.23"
httpx = "^0.25"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
